# lolabunny.app

./: .env.example  .gitignore  .version  CMakeLists.txt  Cargo.toml  LICENSE  Package.resolved  Package.swift  README.md  VERSION  entrypoint.j2  prepare-local-release-mock.sh  prepare-update-fixture.sh
.cargo/: config.toml
.githooks/: post-commit
.github/workflows/: build-macos.yml  build-release-artifacts.yml
Bundle/: Info.plist  Lolabunny.entitlements  MacOSAppInfo.plist
Sources/LolabunnyDistributionSupport/: LocalReleaseServer.swift
Sources/LolabunnyMacOSApp/: LolabunnyMacOSApp.swift
Sources/LolabunnyMacOSAppCore/: AppDelegate.swift  AppShell.swift  AppView.swift  Config.swift  GlobalHotKey.swift  Logging.swift  Models.swift  Notifications.swift  ServerRuntime.swift  TextInterceptor.swift
Sources/LolabunnyMonolithApp/: LolabunnyMonolithApp.swift
Sources/LolabunnyServer/: main.swift
Sources/LolabunnyServerCore/: CommandRouting.swift  HTTPServer.swift  ModuleResources.swift  Paths.swift
Sources/LolabunnyServerCore/Resources/: BindingsPage.html
Sources/LolabunnyWidget/: main.swift
Sources/LolabunnyWidgetCore/: AppDelegate.swift  AppView.swift  CommandPalette.swift  Config.swift  Logging.swift  Models.swift  Notifications.swift  ServerArchiveUtils.swift  ServerDownloader.swift  ServerRuntime.swift  ServerUpdateFlow.swift  ServerVersioning.swift  TextInterceptor.swift
Sources/LolabunnyWidgetCore/Impl/: HttpServerDownloader.swift  LocalhostServerDownloader.swift
Sources/LolabunnyWidgetServer/: main.swift
Sources/LolabunnyWidgetServerCore/: CommandRouting.swift
Tests/LolabunnyMacOSAppCoreTests/: ServerLifecycleE2ETests.swift
Tests/LolabunnyWidgetCoreTests/: LocalhostServerDownloaderTests.swift  ServerLifecycleE2ETests.swift  UpdateLogicTests.swift
app/: CMakeLists.txt  Info.plist  Package.resolved  Package.swift
app-server/: CMakeLists.txt  Cargo.toml  Package.swift
app-server/Sources/lolabunny/: BlobStore.swift  CommandRouting.swift  HTTPServer.swift  Paths.swift  main.swift
app-server/src/: config.rs  history.rs
app-server/src/plugins/: mod.rs
app-server/src/server/: mod.rs
app-server/src/templates/: base.j2  bindings.j2  blob.j2
app/Sources/Lolabunny/: AppDelegate.swift  AppView.swift  BackendArchiveUtils.swift  BackendBootstrap.swift  BackendDownloader.swift  BackendInstaller.swift  BackendRuntime.swift  BackendSystemInfo.swift  BackendUpdateFlow.swift  BackendVersioning.swift  Config.swift  Models.swift  Notifications.swift  main.swift
app/Sources/Lolabunny/Impl/: GistBackendDownloader.swift
app/Tests/LolabunnyTests/: BackendLifecycleE2ETests.swift  UpdateLogicTests.swift
app/src/: Info.plist  Lolabunny.entitlements  Package.resolved  Package.swift
app/src/Sources/Lolabunny/: AppDelegate.swift  Config.swift  MenuBar.swift  Models.swift  Notifications.swift  ServerRuntime.swift  UpdateManager.swift  UpdateService.swift  UpdateSource.swift  main.swift
app/src/Tests/LolabunnyTests/: UpdateLogicTests.swift
cmake/: arch.cmake  bundle.cmake  swiftpm.cmake
examples/plugins/: github.lua  jira.lua  youtube.lua
gadget/: Info.plist  Package.resolved  Package.swift
gadget/Sources/Lolabunny/: AppDelegate.swift  Config.swift  Logging.swift  Models.swift  Notifications.swift  ServerRuntime.swift  UpdateManager.swift  main.swift
gadget/Tests/LolabunnyTests/: UpdateLogicTests.swift
macos-app/Bunnylol.app/Contents/: Info.plist
macos-app/Bunnylol.app/Contents/MacOS/: bunnylol-launcher
macos/Bunnylol/: AppDelegate.swift  Bunnylol.entitlements  Info.plist  bunnylol.h
macos/Lolabunny/: AppDelegate.swift  Info.plist
scripts/: build-release-macos-app.sh  build-release-widget.sh  create-signing-env.sh  reset-lolabunny-server-state.sh
src/: bunnylol_command_registry.rs  config.rs  lib.rs  main.rs  paths.rs
src/commands/: bunnylol_command.rs  mod.rs
src/plugins/: mod.rs
src/server/: mod.rs  web.rs
src/utils/: mod.rs
src/vault/: crypto.rs  local.rs  mod.rs  secrets.rs
templates/: base.j2
xtask/src/: main.rs
