[workspace]
members = [".", "xtask"]

[package]
name = "lolabunny"
version = "0.0.1"

authors = ["Aaron Lichtman <alichtman@meta.com>", "Joe Previte <jprevite@fb.com>", "Sergei Sidorov <sidosera@fb.com>"]
edition = "2024"
description = "Command Line for Your Browser Location Bar"
license = "MIT"
repository = "https://github.com/sidosera/lolabunny.app"
readme = "README.md"
homepage = "https://github.com/sidosera/lolabunny.app"
keywords = ["browser", "bookmarks", "shortcuts", "url", "search"]
categories = ["command-line-utilities", "web-programming::http-server", "development-tools"]

[lib]
name = "bunnylol"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "bunnylol"
path = "src/main.rs"

[dependencies]
# Shared dependencies
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
xdg = "3.0"

# Lua plugin system
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Command-line parsing (used by both server and CLI)
clap = { version = "4.5", features = ["derive"] }

# Async runtime (used by server, available to CLI)
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

# These are marked as optional so that we can optimize the size of each binary
# They are all needed for one or the other

# Web server dependencies
rocket = { version = "0.5", features = ["json"], optional = true }

# CLI dependencies (optional)
open = { version = "5.3", optional = true }
tabled = { version = "0.20", optional = true }
terminal_size = { version = "0.4", optional = true }
whoami = { version = "1.6", optional = true }
clap_complete = { version = "4.5", optional = true }

[features]
default = ["server", "cli"]
server = ["rocket"]
cli = ["open", "tabled", "terminal_size", "whoami", "clap_complete"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = false
